[gd_scene load_steps=32 format=3 uid="uid://bs8p6bybn6dhd"]

[ext_resource type="Texture2D" uid="uid://b58xv1joypxo5" path="res://assets/textures/grids/Orange/texture_09.png" id="1_aaccn"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_hrbei"]
[ext_resource type="Texture2D" uid="uid://cm5m7nr7dugjd" path="res://assets/textures/grids/Purple/texture_09.png" id="2_dt7ba"]
[ext_resource type="Texture2D" uid="uid://djg8y25y06h5n" path="res://assets/textures/grids/Green/texture_09.png" id="3_q1254"]
[ext_resource type="Texture2D" uid="uid://c8arnlq67qi7" path="res://assets/textures/grids/Dark/texture_05.png" id="4_6iaca"]
[ext_resource type="PackedScene" uid="uid://d1a4px4hdm364" path="res://scenes/player.tscn" id="5_te34d"]
[ext_resource type="Resource" uid="uid://bafm4ninl8gno" path="res://inventory/test_inventory.tres" id="6_hnms0"]
[ext_resource type="Resource" uid="uid://c7m61twqm3v4p" path="res://resources/test_interaction_manager.tres" id="8_s4mwa"]
[ext_resource type="PackedScene" uid="uid://cuuy5suppc24a" path="res://inventory/scenes/inventory.tscn" id="9_sxj2t"]
[ext_resource type="Script" path="res://inventory/scripts/InventoryInterface.gd" id="10_c3hkw"]
[ext_resource type="PackedScene" uid="uid://n5dc7p2v18kr" path="res://inventory/scenes/slot.tscn" id="12_8qxxp"]
[ext_resource type="PackedScene" uid="uid://cmhjr0iop0nnq" path="res://scenes/interactable/chest.tscn" id="13_ulm8m"]
[ext_resource type="Script" path="res://inventory/scripts/inventory_data.gd" id="15_8x5kw"]
[ext_resource type="Resource" uid="uid://nbkh7pdmewma" path="res://inventory/items/pirate_hat.tres" id="16_fi500"]
[ext_resource type="Script" path="res://inventory/scripts/slot_data.gd" id="17_akhrw"]
[ext_resource type="Resource" uid="uid://dhyko00qg7vfm" path="res://inventory/items/coin.tres" id="18_8bw0r"]
[ext_resource type="PackedScene" uid="uid://c6lmb1hfr2h34" path="res://scenes/interactable/start_ship.tscn" id="19_m8qov"]
[ext_resource type="PackedScene" uid="uid://c3khr7h6xdici" path="res://inventory/items/pick_up/pick_up.tscn" id="19_yyvib"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d3g07"]
albedo_texture = ExtResource("1_aaccn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fywn7"]
albedo_texture = ExtResource("2_dt7ba")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jvsyo"]
albedo_texture = ExtResource("3_q1254")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s4d52"]
albedo_texture = ExtResource("4_6iaca")
uv1_triplanar = true

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_txvjt"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_oeqbv"]
sky_material = SubResource("ProceduralSkyMaterial_txvjt")

[sub_resource type="Environment" id="Environment_hyx3i"]
background_mode = 2
sky = SubResource("Sky_oeqbv")
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.635294, 0.709804, 0.745098, 1)
fog_density = 0.005

[sub_resource type="Resource" id="Resource_61o43"]
script = ExtResource("17_akhrw")
item_data = ExtResource("16_fi500")
quantity = 1

[sub_resource type="Resource" id="Resource_441kw"]
script = ExtResource("17_akhrw")
item_data = ExtResource("18_8bw0r")
quantity = 40

[sub_resource type="Resource" id="Resource_3e6p8"]
script = ExtResource("17_akhrw")
item_data = ExtResource("18_8bw0r")
quantity = 50

[sub_resource type="Resource" id="Resource_cltdj"]
script = ExtResource("15_8x5kw")
slot_data = Array[ExtResource("17_akhrw")]([SubResource("Resource_3e6p8"), null, null, null, null])

[sub_resource type="Resource" id="Resource_5xiqg"]
script = ExtResource("17_akhrw")
item_data = ExtResource("16_fi500")
quantity = 1

[sub_resource type="Resource" id="Resource_ofebk"]
script = ExtResource("15_8x5kw")
slot_data = Array[ExtResource("17_akhrw")]([null, SubResource("Resource_5xiqg"), null, null, null])

[node name="world" type="Node3D"]
script = ExtResource("1_hrbei")

[node name="map" type="Node3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="map"]
transform = Transform3D(0.792673, 0, 0.609647, 0, 1, 0, -0.609647, 0, 0.792673, -2, 0.5, -2)
material_override = SubResource("StandardMaterial3D_d3g07")
use_collision = true
collision_mask = 0

[node name="CSGBox3D3" type="CSGBox3D" parent="map"]
transform = Transform3D(0.977257, 0, -0.212058, 0, 1, 0, 0.212058, 0, 0.977257, 3.8, 1, -0.8)
material_override = SubResource("StandardMaterial3D_fywn7")
use_collision = true
collision_mask = 0
size = Vector3(1, 2.03094, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="map"]
transform = Transform3D(0.977257, 0, -0.212058, 0, 1, 0, 0.212058, 0, 0.977257, -1, 1.4, 3)
material_override = SubResource("StandardMaterial3D_jvsyo")
use_collision = true
collision_mask = 0
size = Vector3(0.52052, 2.90228, 0.599273)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
material_override = SubResource("StandardMaterial3D_s4d52")
use_collision = true
collision_mask = 0
radius = 5.0
height = 0.5
sides = 16

[node name="CSGBox3D" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 0.875228, -0.48371, 0, 0.48371, 0.875228, 0, 0.617095, -6.24318)
use_collision = true
collision_mask = 0
size = Vector3(1.96935, 0.491137, 4.00507)

[node name="CSGBox3D5" type="CSGBox3D" parent="map"]
transform = Transform3D(0.999999, 0, -0.00111701, -0.000778936, 0.71674, -0.69734, 0.000800606, 0.69734, 0.71674, 0, 2.39931, -8.89477)
use_collision = true
collision_mask = 0
size = Vector3(1.96935, 0.491137, 4.00507)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0.121918, 0.30203, 0.94547, -0.484912, 0.849279, -0.208773, 0, 4.79416, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hyx3i")

[node name="player" parent="." instance=ExtResource("5_te34d")]
inventory_data = ExtResource("6_hnms0")
interaction_manager = ExtResource("8_s4mwa")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_c3hkw")
metadata/_edit_use_anchors_ = true

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("9_sxj2t")]
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("9_sxj2t")]
visible = false
layout_mode = 0
offset_left = 697.0
offset_top = 257.0
offset_right = 737.0
offset_bottom = 297.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("12_8qxxp")]
visible = false
modulate = Color(1, 1, 1, 0.52549)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="PickUp" parent="." instance=ExtResource("19_yyvib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.23743, 0.377955, 2.59837)
slot_data = SubResource("Resource_61o43")

[node name="PickUp2" parent="." instance=ExtResource("19_yyvib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.23743, 0.377955, -0.997131)
slot_data = SubResource("Resource_441kw")

[node name="Chest2" parent="." instance=ExtResource("13_ulm8m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.64112, -0.287782, 2.24821)
inventory_data = SubResource("Resource_cltdj")

[node name="Chest" parent="." instance=ExtResource("13_ulm8m")]
transform = Transform3D(-0.0977218, 0, -0.995214, 0, 1, 0, 0.995214, 0, -0.0977218, 4.00748, -0.276607, 1.19959)
inventory_data = SubResource("Resource_ofebk")

[node name="start_ship" parent="." instance=ExtResource("19_m8qov")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746804, -0.609523, 15.772)

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
